Item 028: every generated class is a value class
The writer targets JDK 28: class-file version 72, minor 65535 because value
classes are preview there. The identity bit is left clear on every class,
which is what makes a value class; every field is final and strict; and a
constructor writes its fields before it hands itself up to its base, which
is the order a strict field asks for. `lumen run` starts the JVM with
`--enable-preview`. Verified on JDK 28-ea+16: the example program builds,
loads, verifies, and runs, and the JVM refuses it without the flag.

Item 027 is met by the same change: a record and a variant are final, the
base of a type is abstract, fields are final and strict, and nothing is
synchronized, all held by tests over the written bytes.